[package]
name = "farce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
genpdf = { git = "https://github.com/Joeboy/genpdf-rs.git" }
include_dir = "0.7.3"

[profile.release]
strip = true     # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size, not speed
lto = true
codegen-units = 1

