[package]
name = "scenewriter"
authors = ["Joe Button"]
version = "0.0.7"
edition = "2021"
description = "Convert fountain files into screenplay PDFs or HTML"
readme = "README.md"
repository = "https://github.com/Joeboy/scenewriter"
licence = "MIT"
keywords = ["fountain", "screenplay", "screenwriting"]
categories = ["command-line-utilities", "parser-implementations"]
publish = false

[dependencies]
nom = "7.1.3"
genpdf = { git = "https://github.com/Joeboy/genpdf-rs.git" }
include_dir = "0.7.3"
allsorts = "0.14.0"

[profile.release]
strip = true     # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size, not speed
lto = true
codegen-units = 1

